Added content to templates

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "comp2068-lab4",
-  "description": "A project for COMP2068 Lab 4",
+  "name": "comp2068-midterm-joshmineiro",
+  "description": "Midterm assignment for COMP2068",
   "main": "",
   "authors": [
-    "Tom Tsiliopoulos"
+    "Josh Mineiro"
   ],
   "license": "MIT",
   "moduleType": [],
